--- a/TrackEditor/MainWindow.ui
+++ b/TrackEditor/MainWindow.ui
@@ -35,7 +35,7 @@
         </sizepolicy>
        </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>1</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
@@ -1053,7 +1053,7 @@ extra wall height</string>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_8">
            <item>
-            <widget class="QPushButton" name="pbApplyTuple">
+            <widget class="QPushButton" name="pbApplySign">
              <property name="enabled">
               <bool>false</bool>
              </property>
@@ -1063,7 +1063,7 @@ extra wall height</string>
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="pbRevertTuple">
+            <widget class="QPushButton" name="pbRevertSign">
              <property name="enabled">
               <bool>false</bool>
              </property>
@@ -1077,14 +1077,14 @@ extra wall height</string>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_4">
            <item>
-            <widget class="QLabel" name="lblTuplesCount">
+            <widget class="QLabel" name="lblSignsCount">
              <property name="text">
               <string>Signs Count</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="leTuplesCount">
+            <widget class="QLineEdit" name="leSignsCount">
              <property name="enabled">
               <bool>false</bool>
              </property>
@@ -1098,17 +1098,17 @@ extra wall height</string>
          <item>
           <layout class="QGridLayout" name="gridLayout">
            <item row="1" column="3">
-            <widget class="QLineEdit" name="leRVal"/>
+            <widget class="QLineEdit" name="leSignVal"/>
            </item>
            <item row="1" column="4">
-            <widget class="QPushButton" name="pbDeleteTuple">
+            <widget class="QPushButton" name="pbDeleteSign">
              <property name="text">
               <string>Delete</string>
              </property>
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QLineEdit" name="leLVal">
+            <widget class="QLineEdit" name="leSignIndex">
              <property name="text">
               <string/>
              </property>
@@ -1702,8 +1702,8 @@ extra wall height</string>
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>582</width>
-              <height>513</height>
+              <width>120</width>
+              <height>51</height>
              </rect>
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_2">
